--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>GoIT FE14 Homework 04 by Andrei Terentyev</title>
-    <meta name="description" content="GoIT Homework 04, Andrei Terentyev">
+    <title>GoIT FE14 Homework 05 by Andrei Terentyev</title>
+    <meta name="description" content="GoIT Homework 05, Andrei Terentyev">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -19,20 +19,29 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Page</a></li>
+                    <li><a href="#">Shop</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
         <main>
+            <div class="slider">
+                <div class="slidercontent">
+                    <span class="leftnav"></span>
+                    <span class="slidertitle">Affordable Paris Tours</span>
+                    <span class="slidersubtitle">city tours / tour tickets / tour guides</span>
+                    <span class="rightnav"></span>
+                </div>
+            </div>
             <div class="main-wrapper">
                 <div class="featured clearfix">
-                    <h2 class="section-title">Featured Products</h2>
+                    <h2 class="section-title">New Collection</h2>
                     <div class="item-wrapper">
                         <div class="img-wrapper">
                             <img src="img/item1.png" alt="blue shirt">
                         </div>
-                        <div class="item-name">Blue Shirt</div>
+                        <div class="item-name">Blue TShirt</div>
                         <div class="item-price">26</div>
                     </div>
                     <div class="item-wrapper">
@@ -57,70 +66,12 @@
                         <div class="item-name">Cool lingerie</div>
                         <div class="item-price">56</div>
                     </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item5.png" alt="blue shirt">
-                        </div>
-                        <div class="item-name">Blue Shirt</div>
-                        <div class="item-price">26</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item6.png" alt="woman shirt">
-                        </div>
-                        <div class="item-name">Woman shirt</div>
-                        <div class="item-price">26</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item7.png" alt="yellow tshirt">
-                        </div>
-                        <div class="item-name">Yellow tshirt</div>
-                        <div class="item-price">31</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item8.png" alt="cool lingerie">
-                        </div>
-                        <div class="item-name">Cool lingerie</div>
-                        <div class="item-price">56</div>
-                    </div>
                 </div>
-                <section>
-                    <h2 class="section-title">Latest News</h2>
-                    <article class="blog-post">
-                        <img src="img/blogpost1.png"
-                            alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
-                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                        <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio
-                            tincidunt
-                            auctor a ornare</p>
-                        <button class="readmore">Read More</button>
-                    </article>
-                    <article class="blog-post">
-                        <img src="img/blogpost2.png"
-                            alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
-                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                        <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio
-                            tincidunt
-                            auctor a ornare</p>
-                        <button class="readmore">Read More</button>
-                    </article>
-                    <article class="blog-post">
-                        <img src="img/blogpost3.png"
-                            alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
-                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                        <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio
-                            tincidunt
-                            auctor a ornare</p>
-                        <button class="readmore">Read More</button>
-                    </article>
-                </section>
             </div>
         </main>
+        <footer>
+            <p>All Rights Reserved &copy Dokan | Designed <a href="#" alt="ThemenGraph">ThemenGraph</a></p>
+        </footer>
     </div>
 </body>
 
