--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -15,7 +15,7 @@
         <header class="header-wrapper">
             <div class="logo"><a href="#">MART</a></div>
             <nav>
-                <ul class="top-menu">
+                <ul class="top-menu clearfix">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Page</a></li>
@@ -26,72 +26,76 @@
         </header>
         <main>
             <div class="main-wrapper">
-                <div class="featured clearfix">
-                    <h2 class="section-title">Featured Products</h2>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item1.png" alt="blue shirt">
+                <section>
+                    <div class="featured clearfix">
+                        <h2 class="section-title">Featured Products</h2>
+                        <div class="item-wrapper">
+                            <div class="img-wrapper">
+                                <img src="img/item1.png" alt="blue shirt">
+                            </div>
+                            <div class="item-name">Blue Shirt</div>
+                            <div class="item-price">26</div>
                         </div>
-                        <div class="item-name">Blue Shirt</div>
-                        <div class="item-price">26</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item2.png" alt="woman shirt">
+                        <div class="item-wrapper">
+                            <div class="img-wrapper">
+                                <img src="img/item2.png" alt="woman shirt">
+                            </div>
+                            <div class="item-name">Woman shirt</div>
+                            <div class="item-price">26</div>
                         </div>
-                        <div class="item-name">Woman shirt</div>
-                        <div class="item-price">26</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
+                        <div class="item-wrapper">
+                            <div class="img-wrapper">
 
-                            <img src="img/item3.png" alt="yellow tshirt">
+                                <img src="img/item3.png" alt="yellow tshirt">
+                            </div>
+                            <div class="item-name">Yellow tshirt</div>
+                            <div class="item-price">31</div>
                         </div>
-                        <div class="item-name">Yellow tshirt</div>
-                        <div class="item-price">31</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item4.png" alt="cool lingerie">
+                        <div class="item-wrapper">
+                            <div class="img-wrapper">
+                                <img src="img/item4.png" alt="cool lingerie">
+                            </div>
+                            <div class="item-name">Cool lingerie</div>
+                            <div class="item-price">56</div>
                         </div>
-                        <div class="item-name">Cool lingerie</div>
-                        <div class="item-price">56</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item5.png" alt="blue shirt">
+                        <div class="item-wrapper">
+                            <div class="img-wrapper">
+                                <img src="img/item5.png" alt="blue shirt">
+                            </div>
+                            <div class="item-name">Blue Shirt</div>
+                            <div class="item-price">26</div>
                         </div>
-                        <div class="item-name">Blue Shirt</div>
-                        <div class="item-price">26</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item6.png" alt="woman shirt">
+                        <div class="item-wrapper">
+                            <div class="img-wrapper">
+                                <img src="img/item6.png" alt="woman shirt">
+                            </div>
+                            <div class="item-name">Woman shirt</div>
+                            <div class="item-price">26</div>
                         </div>
-                        <div class="item-name">Woman shirt</div>
-                        <div class="item-price">26</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item7.png" alt="yellow tshirt">
+                        <div class="item-wrapper">
+                            <div class="img-wrapper">
+                                <img src="img/item7.png" alt="yellow tshirt">
+                            </div>
+                            <div class="item-name">Yellow tshirt</div>
+                            <div class="item-price">31</div>
                         </div>
-                        <div class="item-name">Yellow tshirt</div>
-                        <div class="item-price">31</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item8.png" alt="cool lingerie">
+                        <div class="item-wrapper">
+                            <div class="img-wrapper">
+                                <img src="img/item8.png" alt="cool lingerie">
+                            </div>
+                            <div class="item-name">Cool lingerie</div>
+                            <div class="item-price">56</div>
                         </div>
-                        <div class="item-name">Cool lingerie</div>
-                        <div class="item-price">56</div>
-                    </div>
-                </div>
+                </section>
+            </div>
+            <div class="blog-wrapper">
                 <section>
                     <h2 class="section-title">Latest News</h2>
                     <article class="blog-post">
                         <img src="img/blogpost1.png"
                             alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
-                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+                        </h3>
                         <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio
                             tincidunt
@@ -101,7 +105,8 @@
                     <article class="blog-post">
                         <img src="img/blogpost2.png"
                             alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
-                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+                        </h3>
                         <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio
                             tincidunt
@@ -111,7 +116,8 @@
                     <article class="blog-post">
                         <img src="img/blogpost3.png"
                             alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
-                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+                        </h3>
                         <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio
                             tincidunt
@@ -120,7 +126,8 @@
                     </article>
                 </section>
             </div>
-        </main>
+    </div>
+    </main>
     </div>
 </body>
 
